@@ -1515,121 +1515,122 @@ body.icons-on .portletWatcher *[class*="icon-"] {
 }
 
 
-.000no-icon{ background-position: 0 0;  }
-.actionicon-folder_factories-add_participant, .contenttype-contact, .contenttype-mitglied, .contenttype-opengever-contact-contact, .contenttype-stelle, .contenttype-zugmitglied, .function-user{ background-position: 0 -66px;  }
-.actionicon-folder_factories-add_tasktemplate, .contenttype-opengever-tasktemplates-tasktemplatefolder{ background-position: 0 -132px;  }
-.actionicon-folder_factories-addresponse, .contenttype-poiresponse, .contenttype-remark{ background-position: 0 -198px;  }
-.actionicon-folder_factories-attach_remote_document, .contenttype-shopitem, .contenttype-ticketattachment, .contenttype-webdocument, .function-upload{ background-position: 0 -264px;  }
-.actionicon-folder_factories-document_with_docucomposer, .actionicon-folder_factories-document_with_template, .contenttype-content-page, .contenttype-document, .contenttype-zugeventlandingpage, .contenttype-zugimmolandingpage, .contenttype-zuginhaltsseite{ background-position: 0 -330px;  }
-.contenttype-albumblock, .contenttype-banner, .contenttype-image, .contenttype-zugbanner, .icon-dokument_bilddatei, .mimetype-bmp, .mimetype-gif, .mimetype-image, .mimetype-jpeg, .mimetype-png{ background-position: 0 -396px;  }
-.contenttype-arbeitsraum-inverse{ background-position: 0 -462px;  }
-.contenttype-arbeitsraum, .contenttype-subarbeitsraum{ background-position: 0 -528px;  }
-.contenttype-billboardad{ background-position: 0 -594px;  }
-.contenttype-billboardcategory, .contenttype-coursecategory, .contenttype-folder, .contenttype-izugfolder, .contenttype-kita-folder, .contenttype-large-plone-folder, .contenttype-newsordner, .contenttype-opengever-dossier-projectdossier, .contenttype-opengever-inbox-yearfolder, .contenttype-stellenordner, .contenttype-topic, .contenttype-vernehmlassungsordner, .contenttype-zugeventfolder, .contenttype-zuggemeinde, .contenttype-zughomefolder, .contenttype-zugimmofolder, .contenttype-zugkantonsratsvorlage, .contenttype-zugkantonsratsvorlagenordner, .contenttype-zugmedienmitteilungsordner, .contenttype-zugorgeinheit, .contenttype-zugstellenordner, .contenttype-zugsubmissionfolder, .contenttype-zugvernehmlassungsordner{ background-position: 0 -660px;  }
-.contenttype-block, .contenttype-buchblock, .contenttype-buchhtmlblock, .contenttype-graphicblock, .contenttype-htmlblock, .contenttype-mitgliedblock, .contenttype-zugalbumblock, .contenttype-zughtmlblock, .contenttype-zuginhaltsblock{ background-position: 0 -726px;  }
-.contenttype-blog-category, .contenttype-blog{ background-position: 0 -792px;  }
-.contenttype-blog-entry{ background-position: 0 -858px;  }
-.contenttype-buch{ background-position: 0 -924px;  }
-.contenttype-changeset{ background-position: 0 -990px;  }
-.contenttype-course, .contenttype-file, .contenttype-flowplayerblock, .function-download{ background-position: 0 -1051px;  }
-.contenttype-egovform, .contenttype-formfolder{ background-position: 0 -1117px;  }
-.contenttype-event, .contenttype-meeting, .contenttype-poodle, .contenttype-zugevent{ background-position: 0 -1183px;  }
-.contenttype-fake-news, .contenttype-news-item, .contenttype-news{ background-position: 0 -1249px;  }
-.contenttype-favorite, .function-favorites{ background-position: 0 -1315px;  }
-.contenttype-fieldsetfolder{ background-position: 0 -1381px;  }
-.contenttype-formbooleanfield{ background-position: 0 -1447px;  }
-.contenttype-formcustomscriptadapter{ background-position: 0 -1513px;  }
-.contenttype-formdatefield{ background-position: 0 -1579px;  }
-.contenttype-formfilefield{ background-position: 0 -1645px;  }
-.contenttype-formfixedpointfield{ background-position: 0 -1711px;  }
-.contenttype-formintegerfield{ background-position: 0 -1777px;  }
-.contenttype-formlabelfield{ background-position: 0 -1843px;  }
-.contenttype-formlinesfield{ background-position: 0 -1909px;  }
-.contenttype-formmaileradapter{ background-position: 0 -1975px;  }
-.contenttype-formmultiselectionfield{ background-position: 0 -2041px;  }
-.contenttype-formpasswordfield{ background-position: 0 -2107px;  }
-.contenttype-formrichlabelfield{ background-position: 0 -2173px;  }
-.contenttype-formrichtextfield{ background-position: 0 -2239px;  }
-.contenttype-formsavedataadapter{ background-position: 0 -2305px;  }
-.contenttype-formselectionfield{ background-position: 0 -2371px;  }
-.contenttype-formstringfield{ background-position: 0 -2437px;  }
-.contenttype-formtextfield{ background-position: 0 -2503px;  }
-.contenttype-formthankspage{ background-position: 0 -2569px;  }
-.contenttype-ftw-mail-mail{ background-position: 0 -2635px;  }
-.contenttype-geolocation{ background-position: 0 -2701px;  }
-.contenttype-kapitel{ background-position: 0 -2767px;  }
-.contenttype-lebenslage, .contenttype-opengever-repository-repositoryfolder{ background-position: 0 -2833px;  }
-.contenttype-lebenslagealias, .contenttype-link, .contenttype-refegovservice, .contenttype-zuglink, .function-arrow-right{ background-position: 0 -2899px;  }
-.contenttype-medienmitteilung, .contenttype-zugmedienmitteilung, .contenttype-zugnews, .contenttype-zugnewsseite, .contenttype-zugvernehmlassung{ background-position: 0 -2965px;  }
-.contenttype-meeting-item, .contenttype-meetingitem, .contenttype-opengever-document-document, .contenttype-vernehmlassung, .contenttype-zugshopitem{ background-position: 0 -3031px;  }
-.contenttype-opengever-contact-contactfolder, .contenttype-orgunit, .contenttype-subsite{ background-position: 0 -3097px;  }
-.contenttype-opengever-dossier-businesscasedossier, .contenttype-opengever-dossier-templatedossier, .contenttype-opengever-zug-bdarp-casedossier1, .contenttype-opengever-zug-bdarp-casedossier2, .contenttype-opengever-zug-bdbds-bdbdscasebddossier, .contenttype-opengever-zug-bdbds-bdbdscasedossier2, .contenttype-opengever-zug-bdbds-bdbdscasevgbgdossier, .contenttype-opengever-zug-digva-orderdossier, .contenttype-opengever-zug-komsko-skocase, .contenttype-opengever-zug-skakr-businesscasedossier{ background-position: 0 -3163px;  }
-.contenttype-opengever-inbox-forwarding, .contenttype-opengever-inbox-inbox{ background-position: 0 -3229px;  }
-.contenttype-opengever-inbox-inbox-inverse{ background-position: 0 -3295px;  }
-.contenttype-opengever-repository-repositoryroot{ background-position: 0 -3361px;  }
-.contenttype-opengever-task-task-inverse{ background-position: 0 -3427px;  }
-.contenttype-opengever-task-task, .contenttype-opengever-tasktemplates-tasktemplate, .contenttype-task, .contenttype-ticket{ background-position: 0 -3493px;  }
-.contenttype-poiissue, .contenttype-poipsctracker, .contenttype-poitracker{ background-position: 0 -3559px;  }
-.contenttype-remark-inverse{ background-position: 0 -3625px;  }
-.contenttype-table{ background-position: 0 -3691px;  }
-.contenttype-ticket-box{ background-position: 0 -3757px;  }
-.contenttype-zugmerkliste, .function-todolist{ background-position: 0 -3823px;  }
-.function-add{ background-position: 0 -3889px;  }
-.function-addtofavorites-inverse, .function-favorites-inverse{ background-position: 0 -3955px;  }
-.function-arrow-down, .function-collapsible-open{ background-position: 0 -4021px;  }
-.function-arrow-up{ background-position: 0 -4082px;  }
-.function-basket{ background-position: 0 -4143px;  }
-.function-collapsible-closed{ background-position: 0 -4209px;  }
-.function-delete{ background-position: 0 -4270px;  }
-.function-edit-inverse, .function-extedit-inverse, .function-togglesledit-inverse{ background-position: 0 -4336px;  }
-.function-edit{ background-position: 0 -4402px;  }
-.function-export-outlook{ background-position: 0 -4468px;  }
-.function-export-pdf-inverse, .function-pdf_export-inverse{ background-position: 0 -4534px;  }
-.function-export-pdf, .function-pdf_export{ background-position: 0 -4600px;  }
-.function-information{ background-position: 0 -4666px;  }
-.function-internet-inverse{ background-position: 0 -4732px;  }
-.function-internet{ background-position: 0 -4798px;  }
-.function-journal-inverse{ background-position: 0 -4864px;  }
-.function-journal{ background-position: 0 -4930px;  }
-.function-lock{ background-position: 0 -4996px;  }
-.function-ok{ background-position: 0 -5062px;  }
-.function-print-inverse{ background-position: 0 -5128px;  }
-.function-print{ background-position: 0 -5194px;  }
-.function-rss{ background-position: 0 -5260px;  }
-.function-settings-inverse{ background-position: 0 -5326px;  }
-.function-settings{ background-position: 0 -5392px;  }
-.function-site{ background-position: 0 -5458px;  }
-.function-start{ background-position: 0 -5524px;  }
-.function-subscribe-newsletter{ background-position: 0 -5590px;  }
-.function-watch-inverse{ background-position: 0 -5656px;  }
-.function-watch{ background-position: 0 -5722px;  }
-.function-watchlist{ background-position: 0 -5788px;  }
-.icon-application{ background-position: 0 -5854px;  }
-.icon-dokument_email, .mimetype-rfc822{ background-position: 0 -5920px;  }
-.icon-dokument_excel, .mimetype-dokument_excel, .mimetype-msexcel, .mimetype-vnd-ms-excel, .mimetype-x-msexcel, .mimetype-xls, .mimetype-xlsx{ background-position: 0 -5986px;  }
-.icon-dokument_pdf, .icon_dokument_pdf, .mimetype-dokument_pdf, .mimetype-pdf, .mimetype-x-pdf{ background-position: 0 -6052px;  }
-.icon-dokument_powerpoint, .mimetype-dokument_powerpoint, .mimetype-mspowerpoint, .mimetype-powerpoint, .mimetype-ppt, .mimetype-vnd-ms-powerpoint, .mimetype-x-mspowerpoint{ background-position: 0 -6118px;  }
-.icon-dokument_text, .icon-text, .mimetype-plain, .mimetype-text{ background-position: 0 -6184px;  }
-.icon-dokument_verweis{ background-position: 0 -6250px;  }
-.icon-dokument_visio, .mimetype-dokument_visio, .mimetype-visio, .mimetype-vnd-visio{ background-position: 0 -6316px;  }
-.icon-dokument_webdokument, .mimetype-html{ background-position: 0 -6382px;  }
-.icon-dokument_word, .mimetype-doc, .mimetype-docx, .mimetype-dokument_word, .mimetype-msword{ background-position: 0 -6448px;  }
-.icon-dokument_zip, .mimetype-dokument_zip, .mimetype-x-zip-compressed, .mimetype-zip{ background-position: 0 -6514px;  }
-.icon-task-remote-task{ background-position: 0 -6580px;  }
-.icon-task-subtask{ background-position: 0 -6646px;  }
-.mimetype-mpp{ background-position: 0 -6712px;  }
-.mimetype-vnd-sun-xml-calc{ background-position: 0 -6778px;  }
-.mimetype-vnd-sun-xml-draw{ background-position: 0 -6844px;  }
-.mimetype-vnd-sun-xml-impress{ background-position: 0 -6910px;  }
-.mimetype-vnd-sun-xml-writer{ background-position: 0 -6976px;  }
-.ui-icon-gripsmall-diagonal-se{ background-position: 0 -7042px;  }
-.wf-forwarding-state-closed, .wf-task-state-tested-and-closed{ background-position: 0 -7103px;  }
-.wf-forwarding-state-open, .wf-task-state-open{ background-position: 0 -7168px;  }
-.wf-task-state-cancelled, .wf-task-state-rejected{ background-position: 0 -7234px;  }
-.wf-task-state-in-progress{ background-position: 0 -7300px;  }
-.wf-task-state-new-successor{ background-position: 0 -7366px;  }
-.wf-task-state-resolved{ background-position: 0 -7432px;  }
-
+.000no-icon{ background-position: 0 0;  } 
+.actionicon-folder_factories-add_participant, .contenttype-contact, .contenttype-mitglied, .contenttype-opengever-contact-contact, .contenttype-stelle, .contenttype-zugmitglied, .function-user{ background-position: 0 -66px;  } 
+.actionicon-folder_factories-add_tasktemplate, .contenttype-opengever-tasktemplates-tasktemplatefolder{ background-position: 0 -132px;  } 
+.actionicon-folder_factories-addresponse, .contenttype-poiresponse, .contenttype-remark{ background-position: 0 -198px;  } 
+.actionicon-folder_factories-attach_remote_document, .contenttype-shopitem, .contenttype-ticketattachment, .contenttype-webdocument, .function-upload{ background-position: 0 -264px;  } 
+.actionicon-folder_factories-document_with_docucomposer, .actionicon-folder_factories-document_with_template, .contenttype-content-page, .contenttype-document, .contenttype-zugeventlandingpage, .contenttype-zugimmolandingpage, .contenttype-zuginhaltsseite{ background-position: 0 -330px;  } 
+.contenttype-albumblock, .contenttype-banner, .contenttype-image, .contenttype-zugbanner, .icon-dokument_bilddatei, .mimetype-bmp, .mimetype-gif, .mimetype-image, .mimetype-jpeg, .mimetype-png{ background-position: 0 -396px;  } 
+.contenttype-arbeitsraum-inverse{ background-position: 0 -462px;  } 
+.contenttype-arbeitsraum, .contenttype-subarbeitsraum{ background-position: 0 -528px;  } 
+.contenttype-billboardad{ background-position: 0 -594px;  } 
+.contenttype-billboardcategory, .contenttype-coursecategory, .contenttype-folder, .contenttype-izugfolder, .contenttype-kita-folder, .contenttype-large-plone-folder, .contenttype-newsordner, .contenttype-opengever-dossier-projectdossier, .contenttype-opengever-inbox-yearfolder, .contenttype-stellenordner, .contenttype-topic, .contenttype-vernehmlassungsordner, .contenttype-zugeventfolder, .contenttype-zuggemeinde, .contenttype-zughomefolder, .contenttype-zugimmofolder, .contenttype-zugkantonsratsvorlage, .contenttype-zugkantonsratsvorlagenordner, .contenttype-zugmedienmitteilungsordner, .contenttype-zugorgeinheit, .contenttype-zugstellenordner, .contenttype-zugsubmissionfolder, .contenttype-zugvernehmlassungsordner{ background-position: 0 -660px;  } 
+.contenttype-block, .contenttype-buchblock, .contenttype-buchhtmlblock, .contenttype-graphicblock, .contenttype-htmlblock, .contenttype-mitgliedblock, .contenttype-zugalbumblock, .contenttype-zughtmlblock, .contenttype-zuginhaltsblock{ background-position: 0 -726px;  } 
+.contenttype-blog-category, .contenttype-blog{ background-position: 0 -792px;  } 
+.contenttype-blog-entry{ background-position: 0 -858px;  } 
+.contenttype-buch{ background-position: 0 -924px;  } 
+.contenttype-changeset{ background-position: 0 -990px;  } 
+.contenttype-course, .contenttype-file, .contenttype-flowplayerblock, .function-download{ background-position: 0 -1051px;  } 
+.contenttype-egovform, .contenttype-formfolder{ background-position: 0 -1117px;  } 
+.contenttype-event, .contenttype-meeting, .contenttype-poodle, .contenttype-zugevent{ background-position: 0 -1183px;  } 
+.contenttype-fake-news, .contenttype-news-item, .contenttype-news{ background-position: 0 -1249px;  } 
+.contenttype-favorite, .function-favorites{ background-position: 0 -1315px;  } 
+.contenttype-fieldsetfolder{ background-position: 0 -1381px;  } 
+.contenttype-formbooleanfield{ background-position: 0 -1447px;  } 
+.contenttype-formcustomscriptadapter{ background-position: 0 -1513px;  } 
+.contenttype-formdatefield{ background-position: 0 -1579px;  } 
+.contenttype-formfilefield{ background-position: 0 -1645px;  } 
+.contenttype-formfixedpointfield{ background-position: 0 -1711px;  } 
+.contenttype-formintegerfield{ background-position: 0 -1777px;  } 
+.contenttype-formlabelfield{ background-position: 0 -1843px;  } 
+.contenttype-formlinesfield{ background-position: 0 -1909px;  } 
+.contenttype-formmaileradapter{ background-position: 0 -1975px;  } 
+.contenttype-formmultiselectionfield{ background-position: 0 -2041px;  } 
+.contenttype-formpasswordfield{ background-position: 0 -2107px;  } 
+.contenttype-formrichlabelfield{ background-position: 0 -2173px;  } 
+.contenttype-formrichtextfield{ background-position: 0 -2239px;  } 
+.contenttype-formsavedataadapter{ background-position: 0 -2305px;  } 
+.contenttype-formselectionfield{ background-position: 0 -2371px;  } 
+.contenttype-formstringfield{ background-position: 0 -2437px;  } 
+.contenttype-formtextfield{ background-position: 0 -2503px;  } 
+.contenttype-formthankspage{ background-position: 0 -2569px;  } 
+.contenttype-ftw-mail-mail{ background-position: 0 -2635px;  } 
+.contenttype-geolocation{ background-position: 0 -2701px;  } 
+.contenttype-kapitel{ background-position: 0 -2767px;  } 
+.contenttype-lebenslage, .contenttype-opengever-repository-repositoryfolder{ background-position: 0 -2833px;  } 
+.contenttype-lebenslagealias, .contenttype-link, .contenttype-refegovservice, .contenttype-zuglink, .function-arrow-right{ background-position: 0 -2899px;  } 
+.contenttype-medienmitteilung, .contenttype-zugmedienmitteilung, .contenttype-zugnews, .contenttype-zugnewsseite, .contenttype-zugvernehmlassung{ background-position: 0 -2965px;  } 
+.contenttype-meeting-item, .contenttype-meetingitem, .contenttype-opengever-document-document, .contenttype-vernehmlassung, .contenttype-zugshopitem{ background-position: 0 -3031px;  } 
+.contenttype-opengever-contact-contactfolder, .contenttype-orgunit, .contenttype-subsite{ background-position: 0 -3097px;  } 
+.contenttype-opengever-dossier-businesscasedossier, .contenttype-opengever-dossier-templatedossier, .contenttype-opengever-zug-bdarp-casedossier1, .contenttype-opengever-zug-bdarp-casedossier2, .contenttype-opengever-zug-bdbds-bdbdscasebddossier, .contenttype-opengever-zug-bdbds-bdbdscasedossier2, .contenttype-opengever-zug-bdbds-bdbdscasevgbgdossier, .contenttype-opengever-zug-digva-orderdossier, .contenttype-opengever-zug-komsko-skocase, .contenttype-opengever-zug-skakr-businesscasedossier{ background-position: 0 -3163px;  } 
+.contenttype-opengever-inbox-forwarding, .contenttype-opengever-inbox-inbox{ background-position: 0 -3229px;  } 
+.contenttype-opengever-inbox-inbox-inverse{ background-position: 0 -3295px;  } 
+.contenttype-opengever-repository-repositoryroot{ background-position: 0 -3361px;  } 
+.contenttype-opengever-task-task-inverse{ background-position: 0 -3427px;  } 
+.contenttype-opengever-task-task, .contenttype-opengever-tasktemplates-tasktemplate, .contenttype-task, .contenttype-ticket{ background-position: 0 -3493px;  } 
+.contenttype-poiissue, .contenttype-poipsctracker, .contenttype-poitracker{ background-position: 0 -3559px;  } 
+.contenttype-remark-inverse{ background-position: 0 -3625px;  } 
+.contenttype-table{ background-position: 0 -3691px;  } 
+.contenttype-ticket-box{ background-position: 0 -3757px;  } 
+.contenttype-zugmerkliste, .function-todolist{ background-position: 0 -3823px;  } 
+.function-add{ background-position: 0 -3889px;  } 
+.function-addtofavorites-inverse, .function-favorites-inverse{ background-position: 0 -3955px;  } 
+.function-arrow-down, .function-collapsible-open{ background-position: 0 -4021px;  } 
+.function-arrow-up{ background-position: 0 -4082px;  } 
+.function-basket{ background-position: 0 -4143px;  } 
+.function-collapsible-closed{ background-position: 0 -4209px;  } 
+.function-delete{ background-position: 0 -4270px;  } 
+.function-edit-inverse, .function-extedit-inverse, .function-togglesledit-inverse{ background-position: 0 -4336px;  } 
+.function-edit{ background-position: 0 -4402px;  } 
+.function-export-outlook{ background-position: 0 -4468px;  } 
+.function-export-pdf-inverse, .function-pdf_export-inverse{ background-position: 0 -4534px;  } 
+.function-export-pdf, .function-pdf_export{ background-position: 0 -4600px;  } 
+.function-information{ background-position: 0 -4666px;  } 
+.function-internet-inverse{ background-position: 0 -4732px;  } 
+.function-internet{ background-position: 0 -4798px;  } 
+.function-journal-inverse{ background-position: 0 -4864px;  } 
+.function-journal{ background-position: 0 -4930px;  } 
+.function-lock{ background-position: 0 -4996px;  } 
+.function-ok{ background-position: 0 -5062px;  } 
+.function-print-inverse{ background-position: 0 -5128px;  } 
+.function-print{ background-position: 0 -5194px;  } 
+.function-rss{ background-position: 0 -5260px;  } 
+.function-settings-inverse{ background-position: 0 -5326px;  } 
+.function-settings{ background-position: 0 -5392px;  } 
+.function-site{ background-position: 0 -5458px;  } 
+.function-start{ background-position: 0 -5524px;  } 
+.function-subscribe-newsletter{ background-position: 0 -5590px;  } 
+.function-watch-inverse{ background-position: 0 -5656px;  } 
+.function-watch{ background-position: 0 -5722px;  } 
+.function-watchlist{ background-position: 0 -5788px;  } 
+.icon-application{ background-position: 0 -5854px;  } 
+.icon-dokument_email, .mimetype-rfc822{ background-position: 0 -5920px;  } 
+.icon-dokument_excel, .mimetype-dokument_excel, .mimetype-msexcel, .mimetype-vnd-ms-excel, .mimetype-x-msexcel, .mimetype-xls, .mimetype-xlsx{ background-position: 0 -5986px;  } 
+.icon-dokument_mindmanager{ background-position: 0 -6052px;  } 
+.icon-dokument_msproject{ background-position: 0 -6118px;  } 
+.icon-dokument_pdf, .icon_dokument_pdf, .mimetype-dokument_pdf, .mimetype-pdf, .mimetype-x-pdf{ background-position: 0 -6184px;  } 
+.icon-dokument_powerpoint, .mimetype-dokument_powerpoint, .mimetype-mspowerpoint, .mimetype-powerpoint, .mimetype-ppt, .mimetype-vnd-ms-powerpoint, .mimetype-x-mspowerpoint{ background-position: 0 -6250px;  } 
+.icon-dokument_text, .icon-text, .mimetype-plain, .mimetype-text{ background-position: 0 -6316px;  } 
+.icon-dokument_verweis{ background-position: 0 -6382px;  } 
+.icon-dokument_visio, .mimetype-dokument_visio, .mimetype-visio, .mimetype-vnd-visio{ background-position: 0 -6448px;  } 
+.icon-dokument_webdokument, .mimetype-html{ background-position: 0 -6514px;  } 
+.icon-dokument_word, .mimetype-doc, .mimetype-docx, .mimetype-dokument_word, .mimetype-msword{ background-position: 0 -6580px;  } 
+.icon-dokument_zip, .mimetype-dokument_zip, .mimetype-x-zip-compressed, .mimetype-zip{ background-position: 0 -6646px;  } 
+.icon-task-remote-task{ background-position: 0 -6712px;  } 
+.icon-task-subtask{ background-position: 0 -6778px;  } 
+.mimetype-mpp{ background-position: 0 -6844px;  } 
+.mimetype-vnd-sun-xml-calc{ background-position: 0 -6910px;  } 
+.mimetype-vnd-sun-xml-draw{ background-position: 0 -6976px;  } 
+.mimetype-vnd-sun-xml-impress{ background-position: 0 -7042px;  } 
+.mimetype-vnd-sun-xml-writer{ background-position: 0 -7108px;  } 
+.ui-icon-gripsmall-diagonal-se{ background-position: 0 -7174px;  } 
+.wf-forwarding-state-closed, .wf-task-state-tested-and-closed{ background-position: 0 -7235px;  } 
+.wf-forwarding-state-open, .wf-task-state-open{ background-position: 0 -7300px;  } 
+.wf-task-state-cancelled, .wf-task-state-rejected{ background-position: 0 -7366px;  } 
+.wf-task-state-in-progress{ background-position: 0 -7432px;  } 
+.wf-task-state-new-successor{ background-position: 0 -7498px;  } 
+.wf-task-state-resolved{ background-position: 0 -7564px;  } 
 
 
 
