@@ -5,6 +5,9 @@ Changelog
 1.1.6 (unreleased)
 ------------------
 
+- Added mimetypes and icons for MS Visio, MS Project and MindManager files
+  [lgraf]
+
 - Hide chapter description in izug4.
   [mathias.leimgruber]
 
